closed contact list added
