# routes/close_contact.js
@@ -2,5 +2,6 @@ const { authenticate, authorize } = require("../middlewares/auth")
 const closeContactControl = require('../controllers/close_contact');
 
 module.exports = app => {
-    app.post('/close_contact/w/create', authenticate, authorize(['ADMIN','USER']), closeContactControl.insertData);
+    app.post('/close_contact/w/create', authenticate, authorize(['ADMIN', 'USER']), closeContactControl.insertData);
+    app.get('/close_contact/w/view/:empId', authenticate, authorize(['ADMIN']), closeContactControl.viewData);
 }
